solved elements getting misaligned in console
- solved elements getting misaligned in console due to rounding error when calculating width in css

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -161,7 +161,7 @@ CONSOLE PANEL
 	padding-left: 10px;
 	padding-right: 10px;
 	position: relative;
-	width: calc(100vw - 11rem - 10rem - 17px);
+	width: calc(100vw - 2px - 11rem - 10rem - 17px);
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
